kubernetes-networks/dashboard/dashboard-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: kubernetes-dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: ClusterIP
  clusterIP: None
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
